style.css
:root {
  --background-color: #22272e;

  --main-web-font-size: calc(1.325rem + 0.9vw);
  --main-mobile-font-size: 1.525rem;
  
  --h2-web-font-size: calc(0.8rem);
  --h2-mobile-font-size: 0.7rem;

  --span-web-font-size: 1.2rem;
  --span-medium-font-size: 1.1rem;
  --span-small-font-size: 1rem;
  --span-xs-font-size: 0.9rem;
  
  --p-web-font-size: 1.2rem;
  --p-medium-font-size: 1.1rem;
  --p-small-font-size: 1rem;
  --p-xs-font-size: 0.9rem;
  
  --li-web-font-size: 1rem;
  --li-medium-font-size: 0.9rem;
  --li-small-font-size: 0.8rem;
  --li-xs-font-size: 0.7rem;

}

:root {
  color-scheme: dark light;
}

html {
  margin: 10%;
  color: white;
  margin-top: 0;
}

body {
  padding: 5%;
  background-color: var(--background-color);
}

.wrapper {
  background-color: var(--background-color);
  display: flex;
}

.partition-1 {
  text-align: center;
}

li {
  font-size: var(--li-web-font-size);
}

/* -----------------------------------Leaflet Map:  */
div#map-container {
  margin: 2rem;
}
div#map-id {
  height:40vh;
}
nav {
  height: 3rem;
  background-color: #09425e; 
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
}
div#map-id.leaflet-container {
  border: #09425e 15px solid;
  border-top: 0px;
  border-bottom-right-radius: 25px;
  border-bottom-left-radius: 25px;
}
.leaflet-popup-content p {
  margin: 0px 0;
}
.leaflet-popup-content-wrapper {
  padding: 0;
  }
.pin {
  padding: 0.5rem;
}
.pin:hover {
  cursor: pointer;
  padding: 0.2rem;
}
img.leaflet-marker-icon {
  opacity: 70%;
  cursor: pointer;
}
img.leaflet-marker-icon:hover {
  opacity: 100%;
}
textarea#msg {
  min-width: max-content;
  min-height: max-content;
  border: 0;
  padding: 0;
  margin-top: 0;
  outline: teal;
  resize: none;
  overflow: hidden;
  color: #000000;
  font-family: Effra-Medium,Tahoma,sans-serif;
  font-size: var(--p-small-font-size);
  line-height: 2rem;
  background-color: #fff;
}
div > button {
  color: #539bf5;
  -webkit-text-size-adjust: 100%;
  box-sizing: border-box;
  cursor: pointer;
  background-color: #fff;
  -webkit-font-smoothing: antialiased;
  font-weight: normal;
  letter-spacing: normal;
  text-rendering: optimizeSpeed;
  border: none;
  padding: 0;
  display: flex;
  margin: 0;
  /* font-size: 20px; recently changed */
  font-size: 1.5rem;
  font-family: Effra-Medium,Tahoma,sans-serif;
  line-height: 24px;
}
/* ------------------------------------------___End of Leaflet Map*/

button {
  border-style: none;
  background-color: transparent;
}

span {
  color: white;
}

img {
  width: 60%;
	margin: auto;
	display: block;
}

h2 {
  font-family: Effra-Medium,Tahoma,sans-serif;
  font-size: var(--h2-mobile-font-size);
  line-height: 34px;
  margin-top: 50px;
  padding: 0;
}

#road {
  color: #fff;
}

p {
  color: #539bf5;
  font-family: Effra-Medium,Tahoma,sans-serif;
  font-size: var(--p-web-font-size);
  line-height: 20px;
  margin: 0;
  padding: 30px;
}

ul {
  background-color: #09425e;
  list-style-type: none;
  padding-left: 49px;
  padding: 1110;
  overflow: hidden;
  color: #fff;
  line-height: 70px;
  border-radius: 75px;
  text-align: center;
}

ul#header {
  line-height: 1.2rem;
  padding: 2rem;
}

ul#msgList {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.list{
  width: 300px;
  background:white;
  box-shadow:2px 2px 2px 2px black ;
  position:absolute;
  top:50%;
  left:50%;
  transform: translate(-50%,-50%);
}

#imgName {
  padding: 0.5rem;
}

#imgName:hover {
  cursor: pointer;
  opacity: 100%;
}

@media (prefers-color-scheme: dark) {

  div .wrapper {
    --background-color: #22272e;
  }
  div > button {
    color: #539bf5;
  }
  h2 {
    color: #539bf5;
  }
  p {
    color: #539bf5;
  }
  ul {
    background-color:#2d333b;
  }
}

@media screen and (min-width: 1000px ) {

  img {
      max-width: 40vw;
      width: 40%;
      margin: auto;
      display: block;
  }

  #imgName {
    height: auto;
  }
  #map-id {
    height: 80vh;
    /* min-height: 70vh; */
  }
  
}

@media screen and (max-width: 1000px ) {
  .wrapper {
    display: block;
  }
}

@media screen and (max-width: 800px ) {
  html {
    margin: 0%;
  }
  div#map-id.leaflet-container {
    height: 50vh;
  }
  section {
    max-height: 90vh;
  }
}

